<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="pl.poznan.put.cs.io.beerdiary.ModifyPubScreen"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="368dp"
            android:layout_height="400dp"
            android:layout_above="@+id/button4"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">


            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Nazwa -->
                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <!-- Ulica -->
                    <TextView
                        android:id="@+id/textViewStreet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/street" />

                    <EditText
                        android:id="@+id/editTextStreet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <!-- Miasto -->
                    <TextView
                        android:id="@+id/textViewCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/city" />

                    <EditText
                        android:id="@+id/editTextCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <!-- Ocena -->
                    <TextView
                        android:id="@+id/textViewOverall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/overall" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/Widget.AppCompat.RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:numStars="5"
                        android:stepSize="1" />

                    <!-- Design -->
                    <TextView
                        android:id="@+id/textViewDesign"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/design" />

                    <SeekBar
                        android:id="@+id/seekBarDesign"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp" />


                    <!-- Design opis -->
                    <TextView
                        android:id="@+id/textViewDesignDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/design_desc" />

                    <EditText
                        android:id="@+id/editTextDesignDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:inputType="textMultiLine" />

                    <!-- Atmosfera -->
                    <TextView
                        android:id="@+id/textViewAtmosphere"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/atmosphere" />

                    <SeekBar
                        android:id="@+id/seekBarAtmosphere"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp" />

                    <!-- Atmosfera opis -->
                    <TextView
                        android:id="@+id/textViewAtmosphereDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/atmosphere_desc" />

                    <EditText
                        android:id="@+id/editTextAtmosphereDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:inputType="textMultiLine" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/save" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>